fix for tweets covering social icons

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -203,7 +203,7 @@ nav h1, nav h2 {
 
 #stalker {
   display: inline-block;
-  height: 18px;
+  /*height: 18px;*/
   margin-left: 5px;
 }
 
